Phase 9: React frontend with WSO2 OIDC login and role-aware dashboard
- react-oidc-context for Authorization Code + PKCE login against WSO2 IS
- Role-gated UI: compliance officers see summary cards, fraud analysts see action forms, both see shared reads
- Backend roles claim converter now handles both comma-string and JSON-array shapes (WSO2 org-audience roles emit arrays)
- CORS enabled for the Vite dev origin